# Vigia

./: .gitignore  BENCHMARK_RESULTS.md  CLAUDE.md  LICENSE  LINKEDIN_DRAFT.md  README.md  VIGIA_Pentest_Report.docx  heatmap.csv  pyproject.toml
.claude/: settings.json
.claude/agents/: attack-researcher.md  code-reviewer.md  test-writer.md
.claude/commands/: campaign-analysis.md  new-vector.md  review-pr.md  run-tests.md
.claude/rules/: agents-module.md  corpus-mutations.md  evaluator-rules.md  testing.md  token-efficiency.md
.claude/skills/attack-research/: SKILL.md
.claude/skills/seed-generator/: SKILL.md
results/chroma_db/: chroma.sqlite3
tests/: test_adaptive_multiturn.py  test_agents.py  test_attacker_refusal.py  test_benchmark.py  test_database.py  test_evaluator.py  test_hooks.py  test_mutation_engine.py  test_planner.py  test_prioritizer.py  test_providers.py  test_remediation.py  test_reporting.py  test_scanner.py  test_targets.py  test_token_efficiency.py
vigia/: attacker.py  benchmark.py  cli.py  database.py  evaluator.py  hooks.py  mutation_engine.py  prioritizer.py  providers.py  runner.py  scanner.py
vigia/agents/: __init__.py  evaluator.py  planner.py  remediation.py  runner.py  target.py  tools.py
vigia/config/: agent_example.yaml  claude_haiku.yaml  default.yaml  default_claudejudge.yaml  gemini.yaml  gemma2.yaml  http_example.yaml  mistral.yaml
vigia/corpus/seeds/: agent_seeds.json  seeds_mutated.json  seeds_validated.json
vigia/reporting/: __init__.py  generator.py
vigia/targets/: __init__.py
vigia/targets/rag_victim/documents/: acta_comite.txt  empleados.txt  infraestructura.txt
